--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,9 @@ html {
   scroll-behavior: smooth;
   font-family: 'Montserrat';
 }
-
+a {
+  color: #222;
+}
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -322,6 +324,10 @@ textarea {
   padding: 10px 15px;
   transition: all 400ms ease-in-out;
 }
+.nav-link.active a{
+  background:#222;
+  color:#fff;
+}
 .nav-link a:hover {
   background:#222;
   color:#fff;
@@ -379,7 +385,7 @@ textarea {
   color: #222;
 }
 .btn-green a{
-  background-color: #51C164;
+  background-color: #296130;
   color: #fff;
 }
 .home-footer {
@@ -397,7 +403,7 @@ textarea {
   transition: all 400ms ease-in-out;
 }
 .btn-plant a:hover {
-  background: url() left center #51C164 no-repeat;
+  background: url() left center #296130 no-repeat;
   color: #fff;
 }
 .btn svg {
@@ -438,7 +444,7 @@ article {
 }
   
 .article-body nav li.visible > a {
-  color: #51C164;
+  color: #296130;
   transform: translate(5px);
 }
 
@@ -454,7 +460,7 @@ article {
 .article-body nav path {
   transition: all 300ms ease;
   fill: transparent;
-  stroke: #51C164;
+  stroke: #296130;
   stroke-width: 3px;
   stroke-dasharray: 0 0 0 1000;
   stroke-linecap: round;
@@ -488,8 +494,8 @@ article {
 }
 
 .article-body article a {
-  color: #51C164;
-  text-decoration-color: #51C164;
+  color: #296130;
+  text-decoration-color: #296130;
   transition: all 0.25s ease-in-out;
 }
 .article-body article a:hover {
@@ -574,6 +580,66 @@ footer {
 }
 .btn-plant:hover .scroll-down::before {
   background-color: #fff;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  max-width: 1088px;
+  margin:auto;
+}
+.grid-el {
+  position: relative;
+  overflow: hidden;
+}
+.grid-el .image_container{
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.grid-el .image_container img{
+  height:100%;
+}
+.grid-el .hover-el {
+  position: absolute;
+  bottom:-100px;
+  left:0;
+  height:40%;
+  width: 100%;
+  background: rgba(139, 139, 139, 0.0);
+  background: -webkit-linear-gradient(top, rgba(139, 139, 139, 0.0), rgba(40, 40, 40, 0.8));
+  background: -moz-linear-gradient(top, rgba(139, 139, 139, 0.0), rgba(40, 40, 40, 0.8));
+  background: linear-gradient(to bottom, rgba(40, 40, 40, 0.0),rgba(40, 40, 40, 0.1), rgba(40, 40, 40, 0.2),rgba(40, 40, 40, 0.4), rgba(40, 40, 40, 0.8));
+  opacity: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  transition: all 400ms ease;
+  color: #fff;
+  font-size: 18pt;
+}
+.grid-el .hover-el-el {
+  margin-top: auto;
+  margin-bottom: 20px;
+  padding: 0 20px;
+  width: calc(100% - 40px);
+}
+.grid-el .hover-el .small-text {
+  font-size: 12pt;
+}
+.grid-el:hover .hover-el {
+  bottom:0;
+  left:0;
+  opacity: 1;
+}
+.inline-btn {
+  padding: 15px 20px;
+  border: 2px solid #fff;
+  margin-top: 20px;
 }
 @-moz-keyframes scrollDownAnimation {
   0% {
